index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "tailwindcss";

* {
  font-family: "Ubuntu", serif;
  scrollbar-gutter: stable;
}

body {
  background-color: white;
}

:root {
  --backgroundColor: #f1f1f1;
  --contrast: #f79e38;
}

.text-responsive {
  @apply text-xs md:text-sm;
}

@keyframes shimmer {
  0% {
    background-position: 100% 0;
  }
  100% {
    background-position: -100% 0;
  }
}

.animate-shimmer {
  animation: shimmer 1.5s infinite linear;
}

